; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_macvtap.c_macvtap_free_minor.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_macvtap.c_macvtap_free_minor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.macvlan_dev = type { i64 }

@minor_lock = common dso_local global i32 0, align 4
@minor_idr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.macvlan_dev*)* @macvtap_free_minor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @macvtap_free_minor(%struct.macvlan_dev* %0) #0 {
  %2 = alloca %struct.macvlan_dev*, align 8
  store %struct.macvlan_dev* %0, %struct.macvlan_dev** %2, align 8
  %3 = call i32 @mutex_lock(i32* @minor_lock)
  %4 = load %struct.macvlan_dev*, %struct.macvlan_dev** %2, align 8
  %5 = getelementptr inbounds %struct.macvlan_dev, %struct.macvlan_dev* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.macvlan_dev*, %struct.macvlan_dev** %2, align 8
  %10 = getelementptr inbounds %struct.macvlan_dev, %struct.macvlan_dev* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = call i32 @idr_remove(i32* @minor_idr, i64 %11)
  %13 = load %struct.macvlan_dev*, %struct.macvlan_dev** %2, align 8
  %14 = getelementptr inbounds %struct.macvlan_dev, %struct.macvlan_dev* %13, i32 0, i32 0
  store i64 0, i64* %14, align 8
  br label %15

15:                                               ; preds = %8, %1
  %16 = call i32 @mutex_unlock(i32* @minor_lock)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @idr_remove(i32*, i64) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
